# locuplot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
example/: locustfile.py  stats_history.ipynb
example/stats/: sample_failures.csv  sample_stats.csv  sample_stats_history.csv
locuplot/: argument_parser.py  main.py
locuplot/dto/: argument.py
locuplot/helpers/: plot.py
locuplot/locust/: failures.py  generic.py  history_stats.py  stats.py
locuplot/templates/: template.html
tests/: test_locuplot.py
