[tool.poetry]
name = "locuplot"
version = "0.1.1"
description = "Python application for generating plot from locust statistics csv"
authors = ["pawndev <coquelet.c@gmail.com>"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pawndev/locuplot/issues"
issues = "https://github.com/pawndev/locuplot/issues"

[tool.poetry.scripts]
locuplot = "locuplot.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
numpy = "^1.18.5"
logzero = "^1.5.0"
mpld3 = "^0.3"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
locust = "^1.0.3"
taskipy = "^1.2.1"
jupyter = "^1.0.0"

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
locust = "locust -f example/locustfile.py --host=https://ratelimit.pawndev.com --headless -u 10 -r 2 -t 10m --csv=example/stats/sample --csv-full-history"
jupyter = "jupyter notebook --notebook-dir=example/ --port 9999"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
